More styling, I am satisfied with the homepage for now Still need to find more images though

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -58,3 +58,13 @@ h6 {
   font-family: ostrichSans;
   src: url('./assets/ostrich-sans-master/OstrichSans-Bold.otf');
 }
+
+@font-face {
+  font-family: ostrichSansHeavy;
+  src: url('./assets/ostrich-sans-master/OstrichSansRounded-Medium.otf');
+}
+
+@font-face {
+  font-family: grenze;
+  src: url('./assets/Grenze-Thin.otf');
+}
