--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -10,7 +10,7 @@
 
 * {
   margin: 0;
-  font-family: ostrichSans, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: jostLight, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html,
@@ -81,4 +81,14 @@ h6 {
 @font-face {
   font-family: robotoLight;
   src: url('./assets/Roboto-Light.ttf');
+}
+
+@font-face {
+  font-family: jostMedium;
+  src: url('./assets/Jost-400-Book.otf');
+}
+
+@font-face {
+  font-family: jostLight;
+  src: url('./assets/Jost-300-Light.otf');
 }
