--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -10,7 +10,7 @@
 
 * {
   margin: 0;
-  font-family: jostLight, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: jostLight, Arial, Helvetica, sans-serif;
 }
 
 html,
