--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -105,12 +105,13 @@ h6 {
 
 .custom-shape-divider-bottom-1655480482 {
   position: absolute;
+  /* top: 100px; */
   bottom: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
   line-height: 0;
-  transform: rotate(180deg);
+  transform: rotate(180deg) translateY(-2px);
 }
 
 .custom-shape-divider-bottom-1655480482 svg {
