--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -122,9 +122,9 @@ h6 {
 }
 
 .custom-shape-divider-bottom-1655480482 .shape-fill {
-  fill: #17181C;
+  fill: #2c2828;
 }
 
 .custom-shape-divider-top-1655480231 .shape-fill {
-  fill: #17181C;
+  fill: #2c2828;
 }
